--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "TUHA2508",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cli": "^1.0.1",
     "dotenv": "^16.3.1",
